[package]
name = "game_jam_jan_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22.1"
bevy_mod_picking = "0.17.0"
bevy_obj = {version = "0.12.0", features = ["scene"] }
